--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,8 @@ body {
 
 .main-header {
     background-color: #ffffff;
-    padding: 10px 0
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .header-content-wrapper {
@@ -28,12 +29,22 @@ body {
 .main-nav a {
     color: black;
     text-decoration: none;
+    padding-top: 35px;
     font-size: 14px;
     font-weight: bold;
     text-transform: uppercase;
+    padding-bottom: 30px;
+    border-bottom: 5px solid transparent;
+    display: inline-block;
 }
 
 .logo-container img {
     height: 90px;
     display: block;
+}
+
+.main-nav a:hover {
+    color: #0088cc;
+    border-bottom: 5px solid #0088cc;
+    display: inline-block;
 }
